# sage

./: LICENSE  README.md  TODO.md  pyproject.toml
data/: nodes.py
sage/: network.py  node.py  plot.py
sage/data/: life.py
tests/test_sage/: test_node.py  test_plot.py
