[project]
name = "sage"
version = "0.1.0"
description = ""
authors = [
    {name = "Ike Urquhart",email = "ikeurqu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]


[tool.ruff]
line-length = 120